tests/negative/typecheck/try_sum_not_error.orng
fn main() -> Int {
    try f()
}

fn f() -> (ok: Int | err: Char) {
    return .err('d')
}